js for random quote and some styling

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
       <button class="btn">Generate Quote</button>
       <div class="quote-container">
-        <span class="quote"><i class="fas fa-quote-left"></i></span>
-        <span class="quote"
+        <span class="quote quotation"><i class="fas fa-quote-left fa-3x"></i></span>
+        <span class="quote" id="quote"
           >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur sint iste optio placeat dolor labore, reprehenderit ipsum aspernatur blanditiis
           maiores.</span
         >
